fix: restore and center header banner, improve sidebar ad alignment
- Fixed header banner being hidden by removing negative margins and using auto margins.
- Centered topbar to match header alignment.
- Refined sidebar AdSense centering using a flexbox container for more reliable positioning.

--- a/public_html/css/global_new.css
+++ b/public_html/css/global_new.css
@@ -35,21 +35,23 @@ a:hover, .boxbottom a:hover {
 }
 
 #banner { 
-  background: url('/images/banner/header.jpg'); 
+  background: url('/images/banner/header.jpg') no-repeat center; 
   height: 100px; 
-  margin: 0 -8px;
+  margin: 0 auto;
 }
 
 #banner a { 
   display: block; 
   height: 100px; 
-  width: 950px;
+  width: 100%;
+  max-width: 950px;
+  margin: 0 auto;
 }
 
 .topbar { 
   background: #000 url('/images/banner/navtop.gif') repeat-x; 
   height: 31px; 
-  margin: -10px -8px 0;
+  margin: -10px 0 0;
 }
 
 .topbar a { 
